--- a/styles/globals.css
+++ b/styles/globals.css
@@ -28,7 +28,7 @@
   background: linear-gradient(
     97.86deg,
     #ff073a 0%,
-    #c71d12 53.65%,
+    #122f3d 53.65%,
     #ff5733 100%
   );
 }
